<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="comp3350.flashcard.presentation.EditCardActivity">

    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Edit Card" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCardFont"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/card_front_hint"
        app:layout_constraintWidth_max="488dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputCardFront"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:minLines="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCardBack"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/card_back_hint"
        app:layout_constraintWidth_max="488dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilCardFont">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputCardBack"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:minLines="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSaveCard"
        android:backgroundTint="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/save_deck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilCardBack" />

</androidx.constraintlayout.widget.ConstraintLayout>
