...
        app:layout_constraintWidth_max="488dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputDeckName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            android:visibility="visible" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSaveDeck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:backgroundTint="@color/colorPrimary"
...
